--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
 body {
     margin: 0;
     min-height: 100vh;
@@ -9,8 +19,31 @@ body {
 
 .nav-bar {
     background-color: #1F2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .nav-bar ul {
     margin-top: 0;
+    display: flex;
+    padding: 0%;
+    padding-bottom: 0%;
+    margin-bottom: 0%;
+    gap: 20px;
+}
+
+.nav-bar a {
+    color: #E5E7EB;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
 }
