--- a/style.css
+++ b/style.css
@@ -39,11 +39,55 @@ body {
 
 .nav-bar a {
     color: #E5E7EB;
-    font-size: 16px;
+    font-size: 18px;
     text-decoration: none;
 }
 
 .logo {
     font-size: 24px;
     color: #F9FAF8;
+}
+
+.sec-container {
+    display: flex;
+    background-color: #1F2937;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.sec-container .first-part {
+    max-width: 400px;
+
+}
+
+.sec-container .first-part div {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.sec-container .first-part p {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.sec-container .first-part button {
+    background-color: #3882F6;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 10px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.sec-container .second-part {
+    color: white;
+    background-color: gray;
+    padding: 130px;
 }
